samples/_failures_safe/1761404873_82098b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a509f9fe.c: In function ‘main’:
./samples/SAFE/__tmp_a509f9fe.c:153:13: error: expected declaration or statement at end of input
  153 |             destroy_state_machine(sm);
      |             ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a509f9fe.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a509f9fe.c:153:13: error: expected declaration or statement at end of input
